Fix APK File